--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -78,7 +78,7 @@
   .grid {
     margin-top: 30px;
     display: grid;
-    gap: 15px;
+    row-gap: 20px;
     grid-template-columns: 150px 150px 150px 150px 150px 150px 150px 150px;
   }
   .grid-item {
@@ -169,6 +169,7 @@
   .lawyers .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 25px;
   }
   
   .tags {
@@ -186,11 +187,15 @@
     padding: 20px 15px;
     box-shadow: -1px 2px 8px 2px #0000005e;
     border-radius: 10px;
+    position: relative;
+    height: 375px;
+
   }
   
   .lawyer_grid_item img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
   }
   
   .lawyer_grid_item p {
@@ -198,16 +203,19 @@
     padding: 5px 0;
   }
   
-  .lawyer_grid_item a {
-    display: inline-block;
-    padding: 8px 12px;
-    text-decoration: none;
-    background-color: black;
-    color: white;
-    font-size: 14px;
-    margin-left: 50px;
-    margin-top: 10px;
-    border-radius: 4px;
+
+    .lawyer_grid_item a {
+      display: inline-block;
+      padding: 8px 12px;
+      text-decoration: none;
+      background-color: black;
+      color: white;
+      font-size: 14px;
+      border-radius: 4px;
+      position: absolute;
+      bottom: 10px;
+   
+      right: 25%;
   }
   
   .lawyer_grid_item a:hover {
@@ -252,6 +260,8 @@
     margin-left: 0px;
     margin-top: 10px;
     border-radius: 4px;
+    position: absolute;
+    bottom: 25px;
   }
   
   .inner_doc a:hover {
@@ -315,6 +325,7 @@
     margin: auto;
     margin-bottom: 10px;
     border-radius: 50%;
+    object-fit: cover;
   }
   
   .testimonial-slider-item .inner_doc h4,
